objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ScCollection_Mobile_Number_Work__c</fullName>
        <label>Mobile Number (Work)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Next_of_Kin_Address__c</fullName>
        <label>Next of Kin Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Next_of_Kin_Email__c</fullName>
        <label>Next of Kin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ScCollection_Next_of_Kin_Home_Phone__c</fullName>
        <label>Next of Kin Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Next_of_Kin_Mobile__c</fullName>
        <label>Next of Kin Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Next_of_Kin_Name__c</fullName>
        <label>Next of Kin Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Number_of_contracts__c</fullName>
        <label>Number of contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Power_Attorney_Home_Ph_No__c</fullName>
        <label>Power of Attorney Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Power_Attorney_Mobile_No__c</fullName>
        <label>Power of Attorney Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Power_of_Attorney_Address__c</fullName>
        <label>Power of Attorney Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScCollection_Power_of_Attorney_Email__c</fullName>
        <label>Power of Attorney Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ScCollection_Preference__c</fullName>
        <description>this field would contain the preference of the custommer</description>
        <label>Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Preffered_Name__c</fullName>
        <label>Preffered Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Previous_Employer__c</fullName>
        <label>Previous Employer</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Previous_Home_Phone__c</fullName>
        <label>Previous Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Previous_Mobile__c</fullName>
        <label>Previous Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ScCollection_Skip_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Tier_Risk_band__c</fullName>
        <label>Tier/Risk band</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Trading_As__c</fullName>
        <label>Trading As</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Trust_Name__c</fullName>
        <label>Trust Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Veda_Default_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Veda Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>clcommon__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this record can be archived. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Legal_Entity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity Type</label>
        <referenceTo>clcommon__Legal_Entity__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>clcommon__Master_Archive_Object__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that this is a master object record containing one or more child object records. Master object records may be archived but are not deleted by the system. This is automatically updated by the system. Do not update it manually.</inlineHelpText>
        <label>Master Archive Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary_Record_Id__c</fullName>
        <inlineHelpText>The ID of the summary transaction record within which this record is summarized. This is automatically generated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clcommon__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Selection indicates that the record is a summary transaction record for data archival purpose. This is automatically updated by the system. Do no update it manually.</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect_Gender__c</fullName>
        <description>Holds the gender of the Contact</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Disable_Collection_Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It will disable all the Collection Activities for this Account.</description>
        <inlineHelpText>Check it if you want to disable Collection Activities for this Account.</inlineHelpText>
        <label>Disable Collection Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__External_ID__c</fullName>
        <description>ID of any external contact</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>collect__Invalid_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked indicates that contact address is invalid.</description>
        <label>Invalid Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Invalid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked indicates that contact email is invalid.</description>
        <label>Invalid Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Invalid_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Checked indicates that contact number is invalid.</description>
        <label>Invalid Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>collect__Source_Name__c</fullName>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>genesis__SSN__c</fullName>
        <label>SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Coborrower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coborrower</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Coborrower</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ints__Employer__c</fullName>
        <description>Contact&apos;s Employer field for Lenddo verification.</description>
        <label>Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Is_Lenddo_Verified__c</fullName>
        <description>Check box to determine if the contact information is sent to Lenddo for verification vis the Lenddo Button or not.</description>
        <inlineHelpText>Check box to determine if the contact information is sent to Lenddo for verification via the Lenddo Button or not. Checked if contact info and social networking site credentials have been sent to Lenddo.</inlineHelpText>
        <label>Is Lenddo Verified?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ints__Mailing_County__c</fullName>
        <label>Mailing_County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Mailing_District__c</fullName>
        <label>Mailing_District</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__SSN__c</fullName>
        <label>SSN(deprecated)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Social_Security_Number__c</fullName>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>asterisk</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__University__c</fullName>
        <description>Contact University field for Lenddo verification.</description>
        <label>University</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__mailing_number__c</fullName>
        <label>mailing_number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>loan__Office_Name__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Contact_Type__c</fullName>
        <description>Type of the contact</description>
        <inlineHelpText>Type of the contact</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undefined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <description>Payment mode, used to disburse payments back to broker.</description>
        <inlineHelpText>Payment mode, used to disburse payments back to broker.</inlineHelpText>
        <label>Payment Mode</label>
        <picklist>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Tax_Id__c</fullName>
        <description>Tax Id of the broker</description>
        <inlineHelpText>Tax Id of the broker</inlineHelpText>
        <label>Tax Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <sharedTo>
            <group>All_Internal_Users_Except_Mortgage</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Active_Brokers</fullName>
        <columns>CRM_Mtg_Unique_Id__c</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Mortgage_BDM__c</columns>
        <columns>CRM_Mtg_Re_engaged__c</columns>
        <columns>CRM_Mtg_Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Apps_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Setts_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Apps_Last_Year__c</columns>
        <columns>CRM_Mtg_Setts_Last_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>All Active Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_Sales_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Active_White_Label_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Mortgage_BDM__c</columns>
        <columns>CRM_Mtg_Category__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Apps_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Setts_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Apps_Last_Year__c</columns>
        <columns>CRM_Mtg_Setts_Last_Year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>White Label</value>
        </filters>
        <label>All Active White Label Contacts</label>
        <sharedTo>
            <group>CRM_Mortgage_Sales_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Inactive_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Mortgage_BDM__c</columns>
        <columns>CRM_Mtg_Status__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All Inactive Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_Sales_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_All_Pending_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CRM_Mtg_Mortgage_BDM__c</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Prospective</value>
        </filters>
        <label>All Pending Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_Accreditation_Executives</group>
            <group>CRM_Mortgage_Accreditation_TL</group>
            <group>CRM_Mortgage_BDM_Executives</group>
            <group>CRM_Mortgage_Scenario_Executives</group>
            <group>CRM_Mortgage_Scenario_TL</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_Active_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CRM_Mtg_Re_engaged__c</columns>
        <columns>CRM_Mtg_Status__c</columns>
        <columns>CRM_Mtg_Apps_QTD__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Accreditation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Active Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_Gold_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CRM_Mtg_Apps_YTD__c</columns>
        <columns>CRM_Mtg_Setts_YTD__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Accreditation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Status__c</field>
            <operation>equals</operation>
            <value>Gold</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>My Gold Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_Green_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CRM_Mtg_Apps_YTD__c</columns>
        <columns>CRM_Mtg_Setts_YTD__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Accreditation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Apps_Last_Year__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Apps_Last_Year__c</field>
            <operation>lessOrEqual</operation>
            <value>3</value>
        </filters>
        <label>My Green Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_New_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CRM_Mtg_Status__c</columns>
        <columns>CRM_Mtg_Apps_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Setts_YTD__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Accreditation_Id__c</columns>
        <columns>CRM_Mtg_Accreditation_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:180</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <label>My New Brokers (&lt; 6 months)</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_Prospective_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Prospective</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>CONTACT.IS_PERSON_ACCOUNT</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Prospective Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_Red_Brokers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CRM_Mtg_Apps_YTD__c</columns>
        <columns>CRM_Mtg_Setts_YTD__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Accreditation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Apps_Last_Year__c</field>
            <operation>lessThan</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Channel__c</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.ScCollection_Contact_CL</value>
        </filters>
        <label>My Red Brokers</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_Mtg_My_Reengagement_List</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CRM_Mtg_Status__c</columns>
        <columns>CRM_Mtg_Apps_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Setts_YTD_Amt__c</columns>
        <columns>CRM_Mtg_Apps_Last_Year__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CRM_Mtg_Accreditation_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRM_Mtg_Unique_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>CRM_Mtg_Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Is_Mortgage_BDM__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CRM_Mtg_Re_engaged__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Re-engagement List</label>
        <sharedTo>
            <group>CRM_Mortgage_BDM_Executives</group>
        </sharedTo>
    </listViews>
</CustomObject>